# RajawaliAssimpBridge

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/rajawali/rajawaliassimpbridge/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: tetrahedron.dae  tetrahedron.gltf  tetrahedron.mtl  tetrahedron1.dae  tetrahedron1.gltf
app/src/main/cpp/: AssetManagerIOSystem.cpp  AssetManagerIOSystem.h  BundledAssetIOSystem.cpp  BundledAssetIOSystem.h  CMakeLists.txt  animationJNI.cpp  bridgeJNI.cpp  cameraJNI.cpp  importerJNI.cpp  lightJNI.cpp  materialJNI.cpp  meshJNI.cpp
app/src/main/java/org/rajawali/rajawaliassimpbridge/: AssimpTexture.java  Bridge.java  ICurve4D.java  MainActivity.java  Path3D.java  Path4D.java  SplineOrientationAnimation3D.java  SplineScalingAnimation3D.java
app/src/main/java/org/rajawali3d/rajawaliassimpbridge/: AssimpTexture.java  Bridge.java  ICurve1D.java  ICurve4D.java  MainActivity.java  MalleableMaterialPlugin.java  Path3D.java  Path4D.java  SplineOrientationAnimation3D.java  SplineScalingAnimation3D.java  SplineWeightAnimation3D.java  WeightedPath.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/rajawali/rajawaliassimpbridge/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
